[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.2.2", features = ["neovim-nightly","mlua","libuv"]}
serde = "1.0.158"
serde_json = "1.0"
mlua= { version = "0.8.8", features = ["luajit","serialize"]}

tokio = { version = "1.14.0", features = ["full"] }
rlua_serde = "0.4"
process-stream = "0.3.1"

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
